--- a/style.css
+++ b/style.css
@@ -159,6 +159,24 @@ h1 .heading-1 {
     font-weight: 500;
 }
 
-
-
 /* End Home Section */
+
+
+/* Start Download Section */
+
+
+
+.download-btn {
+    background-color: DodgerBlue;
+    color: white;
+    padding: 1rem 2rem;
+    font-size: 2rem;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.download-btn:hover {
+    background-color: RoyalBlue;
+}
+
+/* End Downlaod Section */
