--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,8 @@
 }
 
 :root {
-  --main-color: #6f5698;
-  --main-color-alt: #563a84;
+  --main-color: #2196F3;
+  --main-color-alt: #1787e0;
   --section-backgroun: #ececec;
   --main-transition: 0.3s;
   --padding-section: 100px;
@@ -147,25 +147,22 @@ ul {
   align-items: center;
 }
 
-.image img {
-  height: 500px;
-  padding-top: 40px;
-  margin-top: 20px;
-}
-
 @media (max-width:767px) {
   .header .logo img {
     width: 100%;
     height: 50px;
   }
-
-  .header .main-nav {
-    margin: auto;
-  }
 }
 
 .header .main-nav {
   display: flex;
+}
+
+@media (max-width:767px) {
+  .header .main-nav {
+    margin: auto;
+  }
+
 }
 
 .header .main-nav>li>a {
@@ -284,7 +281,7 @@ ul {
 }
 
 .header .mega-menu .links li a {
-  color: #6f5698;
+  color: var(--main-color);
   padding: 15px;
   display: block;
   font-size: 18px;
@@ -340,7 +337,7 @@ ul {
 }
 
 .landing .text p {
-  font-size: 17px;
+  font-size: 23px;
   line-height: 1.7;
   margin: 5px 0 0;
   color: #272424;
@@ -390,7 +387,6 @@ ul {
 
 
 .text-1 {
-  margin-top: 100px;
   margin-bottom: 10px;
   letter-spacing: .25em;
   text-transform: uppercase;
@@ -401,7 +397,7 @@ h1 .heading-1 {
   margin-top: 0;
   margin-bottom: 24px;
   font-size: 52px;
-  line-height: 1em;
+  line-height: 1.1;
   font-weight: 500;
 }
 
@@ -414,9 +410,8 @@ h1 .heading-1 {
   padding-top: var(--padding-section);
   padding-bottom: var(--padding-section);
   position: relative;
-  background-color: #f7f1fe;
+  background-color: #f8f6f4;
 }
-
 
 .download .warapper {
   width: 90%;
@@ -458,8 +453,8 @@ h1 .heading-1 {
 }
 
 .heading-2 {
-  margin-top: 0px;
-  margin-bottom: 80px;
+  margin-top: 0;
+  margin-bottom: 20px;
   font-size: 40px;
   line-height: 42px;
   font-weight: 500;
@@ -472,20 +467,20 @@ h1 .heading-1 {
 
 p {
   margin-top: 0;
-  margin-bottom: 35px;
+  margin-bottom: 20px;
 }
 
 .download-btn {
-  background-color: #6f5698;
+  background-color: DodgerBlue;
   color: white;
-  padding: 8px;
+  padding: 5px 6px;
   font-size: 16px;
   text-decoration: none;
   border-radius: 5px;
 }
 
 .download-btn:hover {
-  background-color: #563a84;
+  background-color: RoyalBlue;
 }
 
 @media (max-width: 991px) {
@@ -519,8 +514,6 @@ p {
 
 .featuers .title p {
   margin: 30px 50px;
-  line-height: 30px;
-  font-size: 17px;
 }
 
 .featuer {
@@ -553,17 +546,11 @@ p {
   flex-direction: column;
   border: 1px solid #ecebea;
   border-radius: 6px;
-  transition: 0.7s ease;
-}
-
-.card:hover {
-  transform: scale(1.1);
-
 }
 
 .card-shadow {
   background-color: #fff;
-  box-shadow: 6px 6px 16px 0 rgba(0, 0, 0, 0.14);
+  box-shadow: 6px 6px 16px 0 rgba(0, 0, 0, .08);
 }
 
 .heading-5 {
@@ -580,7 +567,6 @@ p {
   max-width: 100%;
   vertical-align: middle;
   display: inline-block;
-  height: 200px;
 }
 
 .card-image {
@@ -607,13 +593,15 @@ p {
 }
 
 
-/* End Features Section */
+/* End Featuers Section */
+
+
 
 /* Start Button Form */
 
 button.button-3 {
   appearance: none;
-  background-color: rgb(111, 86, 152);
+  background-color: #2ea44f;
   border: 1px solid rgba(27, 31, 35, .15);
   border-radius: 6px;
   box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
@@ -621,11 +609,11 @@ button.button-3 {
   color: #fff;
   cursor: pointer;
   display: inline-block;
-  /* font-family: -apple-system, system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji"; */
-  font-size: 16px;
-  /* font-weight: 600; */
+  font-family: -apple-system, system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  font-size: 14px;
+  font-weight: 600;
   line-height: 20px;
-  padding: 8px 16px;
+  padding: 6px 16px;
   position: relative;
   text-align: center;
   text-decoration: none;
@@ -642,11 +630,11 @@ button.button-3 {
 }
 
 .button-3:hover {
-  background-color: #563a84;
+  background-color: #2c974b;
 }
 
 .button-3:focus {
-  box-shadow: #563a84 0 0 0 3px;
+  box-shadow: rgba(46, 164, 79, .4) 0 0 0 3px;
   outline: none;
 }
 
@@ -658,7 +646,7 @@ button.button-3 {
 }
 
 .button-3:active {
-  background-color: rgb(111, 86, 152);
+  background-color: #298e46;
   box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
 }
 
@@ -750,32 +738,6 @@ button.active {
   background-color: #ccc;
 }
 
-footer {
-  padding: 1em;
-  background-color: rgb(42, 41, 41);
-}
-
-footer p {
-  display: flex;
-  justify-content: center;
-  font-size: 0.9em;
-  margin: 10px;
-  color: white;
-}
-
-.footer-icons {
-  display: flex;
-  justify-content: center;
-}
-
-.footer-icons a {
-  font-size: 1.3em;
-  padding-right: 12px;
-  padding-bottom: 10px;
-  color: #a48cc2;
-  position: relative;
-  top: 10px;
-}
 
 /* Mobile devices */
 @media (max-width: 767px) {
