--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,8 @@
 }
 
 :root {
-  --main-color: #2196F3;
-  --main-color-alt: #1787e0;
+  --main-color: #6f5698;
+  --main-color-alt: #563a84;
   --section-backgroun: #ececec;
   --main-transition: 0.3s;
   --padding-section: 100px;
@@ -147,22 +147,25 @@ ul {
   align-items: center;
 }
 
+.image img {
+  height: 500px;
+  padding-top: 40px;
+  margin-top: 20px;
+}
+
 @media (max-width:767px) {
   .header .logo img {
     width: 100%;
     height: 50px;
   }
+
+  .header .main-nav {
+    margin: auto;
+  }
 }
 
 .header .main-nav {
   display: flex;
-}
-
-@media (max-width:767px) {
-  .header .main-nav {
-    margin: auto;
-  }
-
 }
 
 .header .main-nav>li>a {
@@ -281,7 +284,7 @@ ul {
 }
 
 .header .mega-menu .links li a {
-  color: var(--main-color);
+  color: #6f5698;
   padding: 15px;
   display: block;
   font-size: 18px;
@@ -337,7 +340,7 @@ ul {
 }
 
 .landing .text p {
-  font-size: 23px;
+  font-size: 17px;
   line-height: 1.7;
   margin: 5px 0 0;
   color: #272424;
@@ -387,6 +390,7 @@ ul {
 
 
 .text-1 {
+  margin-top: 100px;
   margin-bottom: 10px;
   letter-spacing: .25em;
   text-transform: uppercase;
@@ -397,7 +401,7 @@ h1 .heading-1 {
   margin-top: 0;
   margin-bottom: 24px;
   font-size: 52px;
-  line-height: 1.1;
+  line-height: 1em;
   font-weight: 500;
 }
 
@@ -410,8 +414,9 @@ h1 .heading-1 {
   padding-top: var(--padding-section);
   padding-bottom: var(--padding-section);
   position: relative;
-  background-color: #f8f6f4;
+  background-color: #f7f1fe;
 }
+
 
 .download .warapper {
   width: 90%;
@@ -453,8 +458,7 @@ h1 .heading-1 {
 }
 
 .heading-2 {
-  margin-top: 0;
-  margin-bottom: 20px;
+  margin-bottom: 80px;
   font-size: 40px;
   line-height: 42px;
   font-weight: 500;
@@ -467,20 +471,20 @@ h1 .heading-1 {
 
 p {
   margin-top: 0;
-  margin-bottom: 20px;
+  margin-bottom: 35px;
 }
 
 .download-btn {
-  background-color: DodgerBlue;
+  background-color: #6f5698;
   color: white;
-  padding: 5px 6px;
+  padding: 8px;
   font-size: 16px;
   text-decoration: none;
   border-radius: 5px;
 }
 
 .download-btn:hover {
-  background-color: RoyalBlue;
+  background-color: #563a84;
 }
 
 @media (max-width: 991px) {
@@ -514,6 +518,8 @@ p {
 
 .featuers .title p {
   margin: 30px 50px;
+  line-height: 30px;
+  font-size: 17px;
 }
 
 .featuer {
@@ -546,11 +552,17 @@ p {
   flex-direction: column;
   border: 1px solid #ecebea;
   border-radius: 6px;
+  transition: 0.7s ease;
+}
+
+.card:hover {
+  transform: scale(1.1);
+
 }
 
 .card-shadow {
   background-color: #fff;
-  box-shadow: 6px 6px 16px 0 rgba(0, 0, 0, .08);
+  box-shadow: 6px 6px 16px 0 rgba(0, 0, 0, 0.14);
 }
 
 .heading-5 {
@@ -567,6 +579,7 @@ p {
   max-width: 100%;
   vertical-align: middle;
   display: inline-block;
+  height: 200px;
 }
 
 .card-image {
@@ -593,15 +606,13 @@ p {
 }
 
 
-/* End Featuers Section */
-
-
+/* End Features Section */
 
 /* Start Button Form */
 
 button.button-3 {
   appearance: none;
-  background-color: #2ea44f;
+  background-color: rgb(111, 86, 152);
   border: 1px solid rgba(27, 31, 35, .15);
   border-radius: 6px;
   box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
@@ -609,11 +620,11 @@ button.button-3 {
   color: #fff;
   cursor: pointer;
   display: inline-block;
-  font-family: -apple-system, system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
-  font-size: 14px;
-  font-weight: 600;
+  /* font-family: -apple-system, system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji"; */
+  font-size: 16px;
+  /* font-weight: 600; */
   line-height: 20px;
-  padding: 6px 16px;
+  padding: 8px 16px;
   position: relative;
   text-align: center;
   text-decoration: none;
@@ -630,11 +641,11 @@ button.button-3 {
 }
 
 .button-3:hover {
-  background-color: #2c974b;
+  background-color: #563a84;
 }
 
 .button-3:focus {
-  box-shadow: rgba(46, 164, 79, .4) 0 0 0 3px;
+  box-shadow: #563a84 0 0 0 3px;
   outline: none;
 }
 
@@ -646,7 +657,7 @@ button.button-3 {
 }
 
 .button-3:active {
-  background-color: #298e46;
+  background-color: rgb(111, 86, 152);
   box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
 }
 
@@ -738,6 +749,32 @@ button.active {
   background-color: #ccc;
 }
 
+footer {
+  padding: 1em;
+  background-color: rgb(42, 41, 41);
+}
+
+footer p {
+  display: flex;
+  justify-content: center;
+  font-size: 0.9em;
+  margin: 10px;
+  color: white;
+}
+
+.footer-icons {
+  display: flex;
+  justify-content: center;
+}
+
+.footer-icons a {
+  font-size: 1.3em;
+  padding-right: 12px;
+  padding-bottom: 10px;
+  color: #a48cc2;
+  position: relative;
+  top: 10px;
+}
 
 /* Mobile devices */
 @media (max-width: 767px) {
@@ -763,6 +800,8 @@ button.active {
 
   #popup-button {
     margin: 10px auto;
+    position: absolute;
+    top: -20px;
   }
 
   #form-box {
@@ -776,6 +815,7 @@ button.active {
   .gallery-title {
     text-align: center;
   }
+
 
   #popup-button {
     margin: 10px auto;
@@ -831,4 +871,32 @@ button.active {
 
 .btn-warning:hover {
   background-color: #d9a400;
+}
+
+@media (max-width: 768px) {
+  .title .heading-2 {
+    font-size: 28px;
+  }
+
+  .card img {
+    border: 0;
+    max-width: 100%;
+    vertical-align: middle;
+    display: inline-block;
+    height: 150px;
+  }
+
+  .heading-5 {
+    margin-top: 0;
+    margin-bottom: 12px;
+    color: #2d2d2d;
+    font-size: 18px;
+    line-height: 30px;
+    font-weight: 500;
+  }
+
+  p.order-text {
+
+    display: none;
+  }
 }
